[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ColorfulEngine"
version = "1.0.0"
authors = [
  { name="Albert Huang", email="albertoyucheng@gmail.com" },
]
description = "Beginner-friendly library for colored terminal outputs."
readme = "README.md"
requires-python = ">=3.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/MariyaSha/humans"
Issues = "https://github.com/MariyaSha/humans"
